--- a/about.html
+++ b/about.html
@@ -14,11 +14,8 @@
                  reading app that allows users to watch their favorite anime shows and read their favorite manga on their mobile devices.</p>
                  <h2>MEET THE TEAM</h2>
                  <ul>
-                 <li><strong class="huu">ABIR NEOGI</strong>-Founder Of Gear 5</li>
-                 <li><strong class="huu">SOUMADEEP NASKAR</strong>-Designer Of Gear 5</li>
-                 <li><strong class="huu">SOUMIK DAS</strong>-Showcaser Of Gear 5</li>
-                 <li><strong class="huu">SMRITILATA SARKAR</strong>-Fonts And Picture Selector Of Gear 5</li>
-                 <li><strong class="huu">SOUVIK SHOME</strong>-Supporting member Of Gear 5</li>
+                 <li><strong class="huu">ABIR NEOGI</strong>-Founder and code writer Of Gear 5</li>
+                 <li><strong class="huu">SOUMADEEP NASKAR</strong>-Designer and content finder Of Gear 5</li>
                  <p>If you have any issue or Feedback regarding Gear 5 or any other anime recommendation feel free to contact us in the contacts section.
                     We will look forward to support you.
                  </p>
@@ -27,4 +24,5 @@
         </div>
 
     </body>
+
 </html>
